# dmenu-manager

./: CHANGELOG.md  Cargo.toml  EXAMPLE.toml  LICENSE  README.md  README.org  example.toml  flake.nix
src/: config.rs  imstr.rs  lib.rs  main.rs  style.rs  tag.rs
