[package]
name = "dmenu-manager"
version = "0.1.0"
edition = "2021"
authors = ["Abysss <abysssol@pm.me>"]
description = "Dmenu wrapper allowing configuration with a toml file"
license = "CC0-1.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["cargo", "env", "wrap_help"] }
owo-colors = { version = "3.4", features = ["supports-colors"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
is-terminal = "0.2"

[profile.release]
lto = true
codegen-units = 1
