[package]
name = "dmm"
version = "0.1.0"
edition = "2021"
authors = ["Abysss <abysssol@pm.me>"]
description = "A dmenu manager allowing configuration with a toml file"
license = "CC0-1.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["cargo", "env"] }
owo-colors = { version = "3.4", features = ["supports-colors"] }
directories = "4.0"
anyhow = "1.0"
is_executable = "1.0"
atty = "0.2"
toml = "0.5"
ahash = "0.7"
mimalloc = "0.1"

[profile.release]
lto = true
codegen-units = 1
